# ortb_v2_5

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: main.yml
src/: lib.rs  req_tests.rs  res_tests.rs  sample_ortb_req.rs  sample_ortb_res.rs
src/dto/: app.rs  audio.rs  banner.rs  bid.rs  bid_request.rs  bid_response.rs  common_defaults.rs  content.rs  data.rs  deal.rs  device.rs  format.rs  geo.rs  imp.rs  metric.rs  mod.rs  native.rs  pmp.rs  producer.rs  publisher.rs  regs.rs  seatbid.rs  segment.rs  site.rs  source.rs  user.rs  video.rs
