[package]
name = "ortb_v2_5"
description = "This is a rustlang implementation of OpenRTB 2.5"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asharif/ortb-v2_5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
